Replace Google OAuth Client Library for Java with jose.4.j
Tests still use Google OAuth Client Library for Java to guarantee
non regression. They'll be migrated to jose.4.j in a second pass.

Change-Id: I2b49d216ccac224cf042881451d18ac4d8132900

--- a/libraries.gradle
+++ b/libraries.gradle
@@ -1,4 +1,4 @@
-allprojects {
+subprojects {
   repositories {
     mavenCentral()
   }
@@ -47,6 +47,7 @@ ext.libs = [
 
   bouncycastle:        'org.bouncycastle:bcprov-jdk15on:1.52',
 
+  jose4j:              'org.bitbucket.b_c:jose4j:0.4.4',
   google_oauth_client: dependencies.create('com.google.oauth-client:google-oauth-client-java6:1.20.0') {
       exclude module: 'httpclient'
     },
