--- a/oasis-webapp/webapp.gradle
+++ b/oasis-webapp/webapp.gradle
@@ -7,10 +7,9 @@ dependencies {
   compile libs.jsr305
   compile libs.guava
   compile libs.bouncycastle
-  compile libs.google_oauth_client
-  compile libs.google_http_client
   compile libs.guice
   compile libs.jongo
+  compile libs.jose4j
   compile libs.elasticsearch
   compile libs.joda_time
   compile libs.icu4j
@@ -38,6 +37,8 @@ dependencies {
   testCompile libs.jukito
   testCompile libs.assertj
   testCompile libs.okhttp_mockserver
+  testCompile libs.google_oauth_client
+  testCompile libs.google_http_client
 }
 
 configurations {
