Update Gradle, dependencies (except Resteasy), and plugins
Note: Closure Templates and Typesafe Config have not been updated,
as recent versions require Java 8 and we're still building for Java 7.

Change-Id: I11e48c210da96f2e1ccce5bac3ff5d62486c977d

--- a/oasis-webapp/webapp.gradle
+++ b/oasis-webapp/webapp.gradle
@@ -81,8 +81,10 @@ idea {
     generatedSourceDirs += file(generateSoyParseInfo.outputDir)
   }
 }
-licenseMain {
-  source = sourceSets.main.allSource.minus(fileTree(generateSoyParseInfo.outputDir))
+project.afterEvaluate {
+  licenseMain {
+    source = sourceSets.main.allSource.minus(fileTree(generateSoyParseInfo.outputDir))
+  }
 }
 
 task run(type: JavaExec, dependsOn: classes) {
