--- a/build.gradle
+++ b/build.gradle
@@ -66,16 +66,18 @@ subprojects {
 buildscript {
   repositories {
     maven {
-      url 'https://plugins.gradle.org/m2'
+      url 'https://plugins.gradle.org/m2/'
     }
   }
   dependencies {
     classpath 'net.ltgt.gradle:gradle-errorprone-plugin:0.0.8'
-    classpath 'net.ltgt.gradle:gradle-apt-plugin:0.3'
-    classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0'
+    classpath 'net.ltgt.gradle:gradle-apt-plugin:0.5'
+    classpath('gradle.plugin.nl.javadude.gradle.plugins:license-gradle-plugin:0.12.1') {
+      exclude group: 'com.android.tools.build', module: 'gradle'
+    }
   }
 }
 
 task wrapper(type: Wrapper) {
-  gradleVersion = '2.6'
+  gradleVersion = '2.11'
 }
