--- a/libraries.gradle
+++ b/libraries.gradle
@@ -64,7 +64,8 @@ ext.libs = [
   resteasy_client:     [
       "org.jboss.resteasy:resteasy-client:$resteasyVersion",
       'net.ltgt.jaxrs:resteasy-client-okhttp3:1.0',
-      "com.squareup.okhttp3:okhttp:3.1.2"
+      "com.squareup.okhttp3:okhttp:3.1.2",
+      "com.squareup.okhttp3:logging-interceptor:3.1.2"
     ],
 
   resteasy_testing:   'net.ltgt.jaxrs:resteasy-testing:0.2',
