Harden Xlint checks (enable all, then selectively disable a few)
Change-Id: Ib5672ce6f3e4af57b75d2b7d79d8f0b841741ba5

--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ subprojects {
 
     tasks.withType(JavaCompile) {
       options.encoding = 'UTF-8'
-      options.compilerArgs += [ '-Werror', '-Xlint:unchecked' ]
+      options.compilerArgs += [ '-Werror', '-Xlint:all', '-Xlint:-processing', '-Xlint:-serial', '-Xlint:-path' ]
     }
 
     if (versionlessOutputs) {
