Implement OpenID Connect Session Management
Change-Id: Ib4b11f3b524b612658fa3c6272096036be08d8e1

--- a/libraries.gradle
+++ b/libraries.gradle
@@ -99,6 +99,8 @@ ext.libs = [
 
   joda_time:           'joda-time:joda-time:2.9.2',
 
+  jsSHA:               'org.webjars.bower:jsSHA:2.0.2',
+
   icu4j:               'com.ibm.icu:icu4j:56.1',
 
   galimatias:          'io.mola.galimatias:galimatias:0.2.1',
