Use Immutables annotations-only JAR in compileOnly
I just discovered Immutables provides an annotations-only JAR.

Change-Id: Iffffa40f4f6d95df06c565be94483883e93f1de5

--- a/oasis-model/model.gradle
+++ b/oasis-model/model.gradle
@@ -8,7 +8,7 @@ dependencies {
     compile libs.icu4j
     compile libs.guava
 
-    compileOnly libs.immutables
+    compileOnly libs.immutables_annotations
     apt         libs.immutables
 
     testCompile libs.junit
