--- a/libraries.gradle
+++ b/libraries.gradle
@@ -35,6 +35,7 @@ ext.libs = [
   jsr305:              'com.google.code.findbugs:jsr305:3.0.1',
 
   immutables:          'org.immutables:value:2.2.10',
+  immutables_annotations: 'org.immutables:value:2.2.10:annotations',
 
   forbiddenapis:       'de.thetaphi:forbiddenapis:2.2',
 
