Cap Error Prone to 2.0.5 when Java 7 is being used
…as 2.0.6+ require Java 8.

Change-Id: Idbe23de65781e165204a62812e5ea4a2f995c912

--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ subprojects {
 
   apply plugin: 'net.ltgt.errorprone'
   configurations.errorprone {
-    resolutionStrategy.force 'com.google.errorprone:error_prone_core:2.0.11'
+    resolutionStrategy.force "com.google.errorprone:error_prone_core:${JavaVersion.current().isJava8Compatible() ? '2.0.11' : '2.0.5'}"
   }
 
   apply plugin: 'idea' // IDEA needs extra configuration for generated sources *sigh*
