Update Gradle plugins
Change-Id: I6332e807127601b0d02eaa23da14621d59ee226e

--- a/oasis-webapp/webapp.gradle
+++ b/oasis-webapp/webapp.gradle
@@ -25,8 +25,9 @@ dependencies {
 
   runtime libs.jsSHA
 
-  compileOnly libs.immutables_annotations
-  apt         libs.immutables
+  compileOnly     libs.immutables_annotations
+  testCompileOnly libs.immutables_annotations
+  apt             libs.immutables
 
   compile libs.slf4j
   runtime libs.log4j_runtime
