--- a/libraries.gradle
+++ b/libraries.gradle
@@ -31,7 +31,9 @@ def log4jVersion = '2.6.2'
 def resteasyVersion = '3.0.18.Final'
 
 ext.libs = [
-  guava:               'com.google.guava:guava:19.0',
+  guava:               dependencies.create('com.google.guava:guava:19.0') {
+      force = true
+    },
   jsr305:              'com.google.code.findbugs:jsr305:3.0.1',
 
   immutables:          'org.immutables:value:2.2.10',
