--- a/libraries.gradle
+++ b/libraries.gradle
@@ -26,24 +26,29 @@ subprojects {
 }
 
 def guiceVersion = '4.1.0'
-def jacksonVersion = '2.8.1'
-def log4jVersion = '2.6.2'
-def resteasyVersion = '3.0.18.Final'
+def jacksonVersion = '2.8.5'
+def log4jVersion = '2.7'
+def resteasyVersion = '3.0.19.Final'
 
 ext.libs = [
-  guava:               dependencies.create('com.google.guava:guava:19.0') {
-      force = true
-    },
+  guava:               [
+      dependencies.create('com.google.guava:guava:20.0') {
+        force = true
+      },
+      // Guava has ErrorProne annotations but depends on the annotations as optional=true,
+      // and ErrorProne chokes when it sees the annotations but cannot find them in classpath.
+      'com.google.errorprone:error_prone_annotations:2.0.15'
+    ],
   jsr305:              'com.google.code.findbugs:jsr305:3.0.1',
 
-  immutables:          'org.immutables:value:2.2.10',
-  immutables_annotations: 'org.immutables:value:2.2.10:annotations',
+  immutables:          'org.immutables:value:2.3.10',
+  immutables_annotations: 'org.immutables:value:2.3.10:annotations',
 
   forbiddenapis:       'de.thetaphi:forbiddenapis:2.2',
 
-  bouncycastle:        'org.bouncycastle:bcprov-jdk15on:1.54',
+  bouncycastle:        'org.bouncycastle:bcprov-jdk15on:1.55',
 
-  jose4j:              'org.bitbucket.b_c:jose4j:0.5.1',
+  jose4j:              'org.bitbucket.b_c:jose4j:0.5.4',
 
   guice:               [
       "com.google.inject:guice:$guiceVersion",
@@ -53,12 +58,12 @@ ext.libs = [
   jongo:               [
       'org.jongo:jongo:1.3.0',
       'de.undercouch:bson4jackson:2.7.0',
-      'org.mongodb:mongo-java-driver:3.2.2',
+      'org.mongodb:mongo-java-driver:3.4.0',
     ],
 
   elasticsearch:       [
       'org.elasticsearch:elasticsearch:1.4.4',
-      'io.searchbox:jest:1.0.0'
+      'io.searchbox:jest:1.0.3'
     ],
 
   resteasy_netty:      [
@@ -69,8 +74,8 @@ ext.libs = [
   resteasy_client:     [
       "org.jboss.resteasy:resteasy-client:$resteasyVersion",
       'net.ltgt.jaxrs:resteasy-client-okhttp3:1.0',
-      "com.squareup.okhttp3:okhttp:3.4.1",
-      "com.squareup.okhttp3:logging-interceptor:3.4.1"
+      "com.squareup.okhttp3:okhttp:3.5.0",
+      "com.squareup.okhttp3:logging-interceptor:3.5.0"
     ],
 
   resteasy_testing:   'net.ltgt.jaxrs:resteasy-testing:0.2',
@@ -100,23 +105,23 @@ ext.libs = [
 
   jdeb:                'org.vafer:jdeb:1.5',
 
-  joda_time:           'joda-time:joda-time:2.9.4',
+  joda_time:           'joda-time:joda-time:2.9.6',
 
-  jsSHA:               'org.webjars.bower:jsSHA:2.0.2',
+  jsSHA:               'org.webjars.bower:jsSHA:2.2.0',
 
-  icu4j:               'com.ibm.icu:icu4j:57.1',
+  icu4j:               'com.ibm.icu:icu4j:58.2',
 
   galimatias:          'io.mola.galimatias:galimatias:0.2.1',
 
   mail:                'org.apache.geronimo.javamail:geronimo-javamail_1.4_mail:1.8.4',
 
-  slf4j:               'org.slf4j:slf4j-api:1.7.21',
+  slf4j:               'org.slf4j:slf4j-api:1.7.22',
 
   log4j2:              "org.apache.logging.log4j:log4j-core:$log4jVersion",
 
   log4j_runtime:       [
       "org.apache.logging.log4j:log4j-slf4j-impl:$log4jVersion",
-      'com.lmax:disruptor:3.3.5',
+      'com.lmax:disruptor:3.3.6',
     ],
 
   args4j:              'args4j:args4j:2.33',
@@ -133,7 +138,7 @@ ext.libs = [
     ],
 
   assertj:             [
-      'org.assertj:assertj-core:2.5.0',
+      'org.assertj:assertj-core:2.6.0',
       'org.assertj:assertj-guava:2.0.0',
       'org.assertj:assertj-joda-time:1.1.0',
     ],
