--- a/build.gradle
+++ b/build.gradle
@@ -21,16 +21,19 @@ subprojects {
     ext.apacheTwo = license('Apache License, Version 2.0', 'https://www.apache.org/licenses/LICENSE-2.0')
     ext.bsd = license('BSD License', 'http://www.opensource.org/licenses/bsd-license.php')
     ext.mit = license('MIT License', 'http://www.opensource.org/licenses/mit-license.php')
+    ext.cddlOrGpl = license('CDDL or GPLv2 with exceptions', 'https://glassfish.java.net/public/CDDL+GPL_1_1.html')
 
     licenses = [
       // libraries under several licenses: pick one
-      (group('org.javassist')):   apacheTwo,
-      (group('org.reflections')): bsd,
+      (group('org.javassist')):              apacheTwo,
+      (group('org.reflections')):            bsd,
+      (group('org.jboss.spec.javax.ws.rs')): cddlOrGpl
     ]
     aliases = [
-      (apacheTwo): [ 'Apache License, Version 2.0', 'The Apache Software License, Version 2.0', 'ASL', 'Apache 2', 'Apache 2.0', 'Apache License 2.0' ],
+      (apacheTwo): [ 'Apache License, Version 2.0', 'Apache License, version 2.0', 'The Apache License, Version 2.0', 'The Apache Software License, Version 2.0', 'ASL', 'Apache 2', 'Apache 2.0', 'Apache License 2.0' ],
       (bsd):       [ 'The New BSD License', 'BSD-like', 'BSD', 'BSD licence'/*sic!*/ ],
       (mit):       [ 'Bouncy Castle Licence', 'ICU License', 'MIT License' ],
+      (cddlOrGpl): [ 'CDDL or GPLv2 with exceptions' ],
     ]
   }
 
