Disable external calls in SoyParseInfoGenerator invocation
The flag is described as something you'd want to disable, but
is enabled by default for backwards compatibility.

Change-Id: I7860e61799a33e94749064d90dd5f7fbdfa5639d

--- a/oasis-webapp/webapp.gradle
+++ b/oasis-webapp/webapp.gradle
@@ -91,6 +91,7 @@ task generateSoyParseInfo(type: JavaExec) {
       '--outputDirectory',      "$outputDir/${javaPackage.replace('.', '/')}/",
       '--srcs',                 srcs.files.join(','),
       '--deps',                 deps.files.join(','),
+      '--allowExternalCalls',   'false',
     ]
 }
 sourceSets.main.java {
