Update to Gradle 4.2
Fix a misconfiguration where jDeb was declared as task output
rather than task input; this is now detected as a deadlock.

Change-Id: Icc139576997cc93b8dbcf7040b03f1f8328f2c44

--- a/oasis-dist/dist.gradle
+++ b/oasis-dist/dist.gradle
@@ -86,7 +86,8 @@ task deb(dependsOn: [explodedDir, debControl]) {
   inputs.files explodedDir.outputs, debControl.outputs, 'CHANGES.txt'
   inputs.properties(oasis)
   inputs.property('debianVersion', debianVersion)
-  outputs.files destfile, changesOut, configurations.jdeb
+  inputs.files configurations.jdeb
+  outputs.files destfile, changesOut
 
   doLast {
     ant.taskdef(name: "deb", classname: "org.vafer.jdeb.ant.DebAntTask", classpath: configurations.jdeb.asPath)
