--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,8 @@ subprojects {
   apply plugin: 'net.ltgt.apt'
 
   apply plugin: 'net.ltgt.errorprone'
-  configurations.errorprone {
-    resolutionStrategy.force "com.google.errorprone:error_prone_core:${JavaVersion.current().isJava8Compatible() ? '2.1.1' : '2.0.5'}"
+  dependencies {
+    errorprone 'com.google.errorprone:error_prone_core:2.1.1'
   }
 
   apply plugin: 'idea' // IDEA needs extra configuration for generated sources *sigh*
@@ -50,8 +50,8 @@ subprojects {
   version = rootProject.version
 
   plugins.withType(JavaPlugin).whenPluginAdded {
-    sourceCompatibility = 1.7
-    targetCompatibility = 1.7
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 
     project.apply plugin: 'de.thetaphi.forbiddenapis'
     forbiddenApis {
