Migrate (most) Guava types to equivalent Java 8
 - Function, Predicate, Optional
   A couple of Optional<long[]> had to be changed to
   @Nullable long[] because of Immutables' handling of j.u.Optional
   wrt hashCode and equals, vs. Guava Optionals (Immutables stores
   a nullable value, but fails to use Arrays.equals() and
   Arrays.hashCode(), leading to Error Prone errors; the errors are
   legitimate and the code should probably be changed to stop using
   arrays in value objects)
 - SettableFuture → CompletableFuture, ListenableFuture → CompletionStage
 - Joiner → String.join() / StringJoiner / Collectors.joining()
 - FluentIterable / Iterables.filter/transform → Stream
 - Some ImmutableList.Builder → Stream.Builder / StringJoiner
 - Functions.toStringFunction() → ::toString
 - Maps.filterKeys → streams
 - Some Iterable<?> in JAX-RS responses → Stream<?>

Change-Id: I333a5f62d377107c3a8188b3c159692f445b790f

--- a/libraries.gradle
+++ b/libraries.gradle
@@ -26,7 +26,7 @@ subprojects {
 }
 
 def guiceVersion = '4.1.0'
-def jacksonVersion = '2.8.5'
+def jacksonVersion = '2.9.1'
 def log4jVersion = '2.7'
 def resteasyVersion = '3.0.19.Final'
 
@@ -91,6 +91,7 @@ ext.libs = [
       "com.fasterxml.jackson.core:jackson-core:$jacksonVersion",
       "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion",
       "com.fasterxml.jackson.datatype:jackson-datatype-guava:$jacksonVersion",
+      "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:$jacksonVersion",
       "com.fasterxml.jackson.jaxrs:jackson-jaxrs-base:$jacksonVersion",
       "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:$jacksonVersion",
       "com.fasterxml.jackson.module:jackson-module-jaxb-annotations:$jacksonVersion",
