--- a/libraries.gradle
+++ b/libraries.gradle
@@ -86,20 +86,19 @@ ext.libs = [
     ],
 
   jackson_annotations: "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion",
-  jackson_joda: "com.fasterxml.jackson.datatype:jackson-datatype-joda:$jacksonVersion",
+  jackson_databind:    "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion",
   jackson:             [
       "com.fasterxml.jackson.core:jackson-core:$jacksonVersion",
       "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion",
       "com.fasterxml.jackson.datatype:jackson-datatype-guava:$jacksonVersion",
       "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:$jacksonVersion",
+      "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion",
       "com.fasterxml.jackson.jaxrs:jackson-jaxrs-base:$jacksonVersion",
       "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:$jacksonVersion",
       "com.fasterxml.jackson.module:jackson-module-jaxb-annotations:$jacksonVersion",
     ],
 
   jdeb:                'org.vafer:jdeb:1.5',
-
-  joda_time:           'joda-time:joda-time:2.9.6',
 
   jsSHA:               'org.webjars.bower:jsSHA:2.2.0',
 
@@ -120,7 +119,7 @@ ext.libs = [
 
   args4j:              'args4j:args4j:2.33',
 
-  config:              'com.typesafe:config:1.2.1',
+  config:              'com.typesafe:config:1.3.1',
 
   junit:               'junit:junit:4.12',
 
@@ -134,6 +133,5 @@ ext.libs = [
   assertj:             [
       'org.assertj:assertj-core:3.8.0',
       'org.assertj:assertj-guava:3.1.0',
-      'org.assertj:assertj-joda-time:2.0.0',
     ],
 ]
