--- a/oasis-model/model.gradle
+++ b/oasis-model/model.gradle
@@ -3,8 +3,7 @@ apply plugin: 'java'
 dependencies {
     compile libs.jsr305
     compile libs.jackson_annotations
-    compile libs.joda_time
-    compile libs.jackson_joda
+    compile libs.jackson_databind
     compile libs.icu4j
     compile libs.guava
 
