--- a/libraries.gradle
+++ b/libraries.gradle
@@ -27,21 +27,21 @@ subprojects {
 
 def guiceVersion = '4.1.0'
 def jacksonVersion = '2.9.1'
-def log4jVersion = '2.7'
-def resteasyVersion = '3.0.19.Final'
+def log4jVersion = '2.9.1'
+def resteasyVersion = '3.1.4.Final'
 
 ext.libs = [
   guava:               'com.google.guava:guava:23.0',
   jsr305:              'com.google.code.findbugs:jsr305:3.0.1',
 
-  immutables:          'org.immutables:value:2.3.10',
-  immutables_annotations: 'org.immutables:value:2.3.10:annotations',
+  immutables:          'org.immutables:value:2.5.5',
+  immutables_annotations: 'org.immutables:value:2.5.5:annotations@jar',
 
-  forbiddenapis:       'de.thetaphi:forbiddenapis:2.2',
+  forbiddenapis:       'de.thetaphi:forbiddenapis:2.3',
 
-  bouncycastle:        'org.bouncycastle:bcprov-jdk15on:1.55',
+  bouncycastle:        'org.bouncycastle:bcprov-jdk15on:1.58',
 
-  jose4j:              'org.bitbucket.b_c:jose4j:0.5.4',
+  jose4j:              'org.bitbucket.b_c:jose4j:0.6.1',
 
   guice:               [
       "com.google.inject:guice:$guiceVersion",
@@ -51,7 +51,7 @@ ext.libs = [
   jongo:               [
       'org.jongo:jongo:1.3.0',
       'de.undercouch:bson4jackson:2.7.0',
-      'org.mongodb:mongo-java-driver:3.4.0',
+      'org.mongodb:mongo-java-driver:3.5.0',
     ],
 
   elasticsearch:       [
@@ -61,14 +61,14 @@ ext.libs = [
 
   resteasy_netty:      [
       "org.jboss.resteasy:resteasy-netty:$resteasyVersion",
-      'io.netty:netty:3.9.9.Final',
+      'io.netty:netty:3.10.6.Final',
     ],
 
   resteasy_client:     [
       "org.jboss.resteasy:resteasy-client:$resteasyVersion",
-      'net.ltgt.jaxrs:resteasy-client-okhttp3:1.0',
-      "com.squareup.okhttp3:okhttp:3.5.0",
-      "com.squareup.okhttp3:logging-interceptor:3.5.0"
+      'net.ltgt.jaxrs:resteasy-client-okhttp3:1.1',
+      "com.squareup.okhttp3:okhttp:3.9.0",
+      "com.squareup.okhttp3:logging-interceptor:3.9.0"
     ],
 
   resteasy_testing:   'net.ltgt.jaxrs:resteasy-testing:0.2',
@@ -102,13 +102,13 @@ ext.libs = [
 
   jsSHA:               'org.webjars.bower:jsSHA:2.2.0',
 
-  icu4j:               'com.ibm.icu:icu4j:58.2',
+  icu4j:               'com.ibm.icu:icu4j:59.1',
 
   galimatias:          'io.mola.galimatias:galimatias:0.2.1',
 
   mail:                'org.apache.geronimo.javamail:geronimo-javamail_1.4_mail:1.8.4',
 
-  slf4j:               'org.slf4j:slf4j-api:1.7.22',
+  slf4j:               'org.slf4j:slf4j-api:1.7.25',
 
   log4j2:              "org.apache.logging.log4j:log4j-core:$log4jVersion",
 
@@ -123,10 +123,10 @@ ext.libs = [
 
   junit:               'junit:junit:4.12',
 
-  mockito:             'org.mockito:mockito-core:1.10.19',
+  mockito:             'org.mockito:mockito-core:2.10.0',
 
   jukito:              [
-      'org.jukito:jukito:1.4.1',
+      'org.jukito:jukito:1.5',
       "com.google.inject.extensions:guice-assistedinject:$guiceVersion",
     ],
 
