Use dev-specific configuration file for 'run' task
Tailored for use with docker-compose (specifically using
mailhog as the smtp server), overridable/completable using
an optional "local.conf" file.

Also configure logging using an (optional) log4j2-dev.xml file.

Change-Id: I1cfa9b28a1d075df7c6eca56ca1eec7900fba7aa

--- a/oasis-webapp/webapp.gradle
+++ b/oasis-webapp/webapp.gradle
@@ -111,7 +111,13 @@ project.afterEvaluate {
 task run(type: JavaExec, dependsOn: classes) {
   main = 'oasis.web.WebApp'
   classpath = sourceSets.main.runtimeClasspath
-  systemProperties = System.getProperties()
+  systemProperties = System.getProperties().findAll { it.key.startsWith("oasis.") } \
+      + [ 'oasis.conf-dir': "${buildDir}" ]
+  args = [
+      '-c', "${rootDir}/dev.conf",
+      '-l', "${rootDir}/log4j2-dev.xml",
+    ]
+}
 }
 
 task extractMessagesFromTemplates(type: JavaExec) {
