Add Gradle tasks to bootstrap a DB and setPassword
Setting up a local dev environment is now as easy as:

 - docker-compose up -d
 - ./gradlew bootstrap
 - Note the generated client secrets, or force them with
   ./gradlew setPassword -PclientType=PROVIDER \
       -PclientId=portal -PclientSecret=xxx

Still needs an easy-peasy way to declare a test service,
but the 'portal' and 'dc' can be (ab)used in the mean time.

Change-Id: I63c3593bc7cf997c7064b5795e7e12f45a52c722

--- a/oasis-webapp/webapp.gradle
+++ b/oasis-webapp/webapp.gradle
@@ -118,6 +118,52 @@ task run(type: JavaExec, dependsOn: classes) {
       '-l', "${rootDir}/log4j2-dev.xml",
     ]
 }
+
+task bootstrap(type: JavaExec, dependsOn: classes) {
+  main = 'oasis.tools.Bootstrap'
+  classpath = sourceSets.main.runtimeClasspath
+  systemProperties = System.getProperties().findAll { it.key.startsWith("oasis.") } \
+      + [ 'oasis.conf-dir': "${buildDir}" ]
+  args = [
+      '-c',                         "${rootDir}/dev.conf",
+      '-l',                         "${rootDir}/log4j2-dev.xml",
+      '--admin',                    'localdev@ozwillo.com',
+      '--password',                 'admin',
+      '--redirect-uri',             'http://localhost:8081/callback',
+      '--post-logout-redirect-uri', 'http://localhost:8081/',
+    ]
+}
+
+task setPassword(type: JavaExec, dependsOn: classes) {
+  main = 'oasis.tools.SetPassword'
+  classpath = sourceSets.main.runtimeClasspath
+  systemProperties = System.getProperties().findAll { it.key.startsWith("oasis.") } \
+      + [ 'oasis.conf-dir': "${buildDir}" ]
+  args = [
+      '-c',              "${rootDir}/dev.conf",
+      '-l',              "${rootDir}/log4j2-dev.xml",
+    ]
+  if (project.hasProperty('dryRun')) {
+    args '--dry-run'
+  }
+
+  doFirst {
+    if (!project.hasProperty('clientType')) {
+      logger.error("property 'clientType' is mandatory for $name;\ninvoke as ./gradlew -PclientType=...")
+    }
+    if (!project.hasProperty('clientId')) {
+      logger.error("property 'clientId' is mandatory for $name;\ninvoke as ./gradlew -PclientId=...")
+    }
+    if (!project.hasProperty('clientSecret')) {
+      logger.error("property 'clientSecret' is mandatory for $name;\ninvoke as ./gradlew -PclientSecret=...")
+    }
+
+    args += [
+        '--type',          project.findProperty('clientType'),
+        '--client-id',     project.findProperty('clientId'),
+        '--client-secret', project.findProperty('clientSecret'),
+      ]
+  }
 }
 
 task extractMessagesFromTemplates(type: JavaExec) {
