Update Closure Templates to the latest (2017-08-08) version
Replace private="true" with visibility="private".
Remove private="true" from templates called from other files.

Change-Id: I44563d3d5aa049f3c565f9517191f94f00f18d36

--- a/libraries.gradle
+++ b/libraries.gradle
@@ -75,12 +75,9 @@ ext.libs = [
 
   jaxrs_webhook:      'net.ltgt.jaxrs:jaxrs-webhook:0.1',
 
-  closure_templates_standalone: [
-      'com.google.template:soy:2015-04-10',
-      'args4j:args4j:2.33',
-    ],
+  closure_templates_standalone: 'com.google.template:soy:2017-08-08',
   closure_templates:   [
-      'com.google.template:soy:2015-04-10',
+      'com.google.template:soy:2017-08-08',
       "com.google.inject.extensions:guice-assistedinject:$guiceVersion",
       "com.google.inject.extensions:guice-multibindings:$guiceVersion",
     ],
