Exclude unneeded (erroneous) transitive dependency on GWT
Google Safe HTML Types, used by Closure Templates, declare a
dependency on GWT that's not actually needed at runtime.
An alternative could be to update past 1.0.6, where the
dependency has been changed for jsinterop-annotations.

Change-Id: I4684da9d76812216e55374506fcca6f19d1a6130

--- a/libraries.gradle
+++ b/libraries.gradle
@@ -75,9 +75,13 @@ ext.libs = [
 
   jaxrs_webhook:      'net.ltgt.jaxrs:jaxrs-webhook:0.1',
 
-  closure_templates_standalone: 'com.google.template:soy:2017-08-08',
+  closure_templates_standalone: dependencies.create('com.google.template:soy:2017-08-08') {
+      exclude group: 'com.google.gwt'
+  },
   closure_templates:   [
-      'com.google.template:soy:2017-08-08',
+      dependencies.create('com.google.template:soy:2017-08-08') {
+        exclude group: 'com.google.gwt'
+      },
       "com.google.inject.extensions:guice-assistedinject:$guiceVersion",
       "com.google.inject.extensions:guice-multibindings:$guiceVersion",
     ],
