Update to Gradle 4.7
Update net.ltgt.apt, and move from the 'apt' configuration
to the "native" 'annotationProcessor' one.

Also fix compile dependency from log4j-core to log4j-api.
log4j-core contains an annotation processor which triggered
a Gradle deprecation warning in :oasis-webapp:compileTestJava;
and we don't actually need to compile against it, only log4j-api.

Change-Id: I8469cb18f33b792663eaa9c602a7338264a010c2

--- a/libraries.gradle
+++ b/libraries.gradle
@@ -111,7 +111,7 @@ ext.libs = [
 
   slf4j:               'org.slf4j:slf4j-api:1.7.25',
 
-  log4j2:              "org.apache.logging.log4j:log4j-core:$log4jVersion",
+  log4j2:              "org.apache.logging.log4j:log4j-api:$log4jVersion",
 
   log4j_runtime:       [
       "org.apache.logging.log4j:log4j-slf4j-impl:$log4jVersion",
